--- a/config/locales/devise.pt-PT.yml
+++ b/config/locales/devise.pt-PT.yml
@@ -55,3 +55,25 @@
         subject: 'Instruções de recuperação da palavra-passe'
       unlock_instructions:
         subject: 'Instruções de desbloqueio'
+        
+
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              blank: "não pode ser inexistente."
+              taken: "já é usado por outro utilizador."
+              invalid: "inválido."
+            password:
+              blank: "não pode ser inexistente."
+              confirmation: "não corresponde à confirmação."
+            password_confirmation:
+              blank: "não pode ser inexistente."
+              confirmation: "não corresponde à Password."
+            name:
+              blank: "não pode ser inexistente."
+            current_password:
+              blank: "não pode ser inexistente."
+
