--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -42,6 +42,7 @@ en:
       updated: "You updated your account successfully."
     sessions:
       signed_in: "Signed in successfully."
+      failure: 'Sign in error has occurred.'
       signed_out: "Signed out successfully."
     unlocks:
       send_instructions: "You will receive an email with instructions about how to unlock your account in a few minutes."
